<resources>
    <string name="app_name">ToastApps</string>
    <string name="titleName">Pendaftaran</string>
    <string name="Almt">Alamat</string>
    <string name="Date">Tanggal</string>
    <string name="btn">Daftar</string>
    <string name="hsl">Tampilan Hasil</string>
    <string name="FirstName">Nama Depan</string>
    <string name="LastName">Nama Belakang</string>
    <string name="TmptLahir">Tempat Lahir</string>
    <string name="TglLahir">Tanggal Lahir</string>
    <string name="tlp">Telepon</string>
    <string name="eml">Email</string>
    <string name="pw1">Password</string>
    <string name="pw2">Masukkan Password Kembali</string>
    <string name="tgl">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="L">Laki Laki</string>
    <string name="P">Perempuan</string>
    <string name="Agama">Agama</string>
    <string name="I">Islam</string>
    <string name="K">Kristen</string>
    <string name="Ka">Katholik</string>
    <string name="H">Hindu</string>
    <string name="B">Buddha</string>
    <string name="KH">KongHucu</string>
    <string name="DLL">Aliran Kepercayaan</string>
    <string name="kmbli">KongHucu</string>
    <string name="dftr">KongHucu</string>
    <string name="lgn">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="ps">Password</string>
    <string name="jdl">Form Pendaftaraan</string>
    <string name="nm">Nama</string>
    <string name="al">Alamat</string>

    <string name="no">No HP</string>
    <string name="si">SIGN IN</string>

    <string name="txtun">Masukkan Username</string>
    <string name="txtps">Masukkan Password</string>
    <string name="txtnm">Masukkan Nama</string>
    <string name="txtal">Masukkan Alamat</string>
    <string name="txthp">Masukkan Nomor Handphone</string>
    <string name="txt2">Tampilan Hasil Menu 2</string>
    <string name="txt3">Tampilan Hasil Menu 3</string>
</resources>
