<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackgroundBox"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/titleName"
                android:textColor="@color/Title"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold|italic"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/FirstName"></EditText>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/LastName"></EditText>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:hint="@string/TmptLahir"></EditText>

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/TglLahir"></EditText>

                </TableRow>

                    <EditText
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/Almt"></EditText>

                <RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/gender"
                        android:textSize="17sp"></TextView>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp">

                        <RadioButton
                            android:layout_marginRight="100dp"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/L">

                        </RadioButton>

                        <RadioButton
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/P">

                        </RadioButton>
                    </TableRow>

                </RadioGroup>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:text="@string/Agama"
                            android:textSize="17sp">

                        </TextView>

                        <TableRow>

                            <RadioButton
                                android:layout_marginRight="100dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/I">
                            </RadioButton>

                            <RadioButton
                                android:layout_marginHorizontal="36dp"
                                android:text="@string/K">
                            </RadioButton>

                        </TableRow>

                        <TableRow>

                            <RadioButton
                                android:layout_marginRight="100dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/Ka">
                            </RadioButton>

                            <RadioButton
                                android:layout_marginHorizontal="20dp"
                                android:text="@string/H">
                            </RadioButton>

                        </TableRow>


                        <TableRow>

                            <RadioButton
                                android:layout_marginRight="100dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/B">
                            </RadioButton>

                            <RadioButton
                                android:layout_marginHorizontal="23dp"
                                android:text="@string/KH">
                            </RadioButton>
                        </TableRow>

                        <RadioButton
                            android:layout_marginRight="100dp"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/DLL"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent">
                        </RadioButton>

                    </RadioGroup>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/tlp">
                    </EditText>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/eml">
                    </EditText>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/pw1">
                </EditText>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/pw2">
                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">
                            <Button
                                android:id="@+id/kmbl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="0dp"
                                android:background="@drawable/rounded_button"
                                android:text="@string/kmbli" />

                            <Button
                                android:id="@+id/dftr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:shadowRadius="10"
                                android:layout_marginBottom="1dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginLeft="60dp"
                                android:background="@drawable/rounded_button"
                                android:text="@string/dftr" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>